# openporch

./: .gitignore  CLAUDE.md  README.md  go.mod  go.sum
.claude/skills/testing/: SKILL.md
.github/workflows/: ci.yml
api/v1alpha1/: manifest.go  types.go
cmd/openporch/: cmd_deploy.go  cmd_deploy_integration_test.go  cmd_deploy_test.go  cmd_destroy.go  cmd_get.go  cmd_get_test.go  cmd_rollback.go  cmd_rollback_test.go  cmd_validate.go  main.go  manifest_source.go  manifest_source_test.go  runner_resolve.go  runner_resolve_test.go
cmd/openporch/testdata/: get_tf_resource_filter.golden.txt
examples/apps/fastapi-demo/: .dockerignore  Dockerfile  manifest.yaml  pyproject.toml
examples/apps/fastapi-demo/src/fastapi_demo/: main.py
examples/apps/my-app/: manifest.yaml
examples/platform/: module-rules.yaml  modules.yaml  providers.yaml  resource-types.yaml  runner-rules.yaml  runners.yaml
internal/config/: config.go  config_test.go  hcl.go
internal/deploy/: deploy.go  deploy_record.go  deploy_test.go  destroy.go  integration_test.go  recorder.go
internal/expr/: expr.go  expr_test.go
internal/graph/: graph.go  graph_test.go
internal/integrationtest/: require.go
internal/manifest/: manifest.go  manifest_test.go
internal/match/: match.go  match_test.go
internal/runner/: from_config.go  from_config_test.go  local.go  runner.go
internal/runner/runnertest/: recording.go
internal/store/: store.go
internal/store/db/: db.go  db_test.go  reader.go  reader_test.go  recorder.go
internal/tofu/: render.go  render_test.go  source.go  source_test.go
(+9 files in other folders)
